--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ jinja2 = "^3.1.2"
 cssfinder-backend-numpy = { version = ">=0.5.0", optional = true }
 cssfinder-backend-rust = { version = ">=0.1.1", optional = true }
 filelock = "^3.12.0"
+threadpoolctl = "^3.1.0"
 
 [tool.poetry.group.dev.dependencies] # ANCHOR: tool.poetry.dev-dependencies
 black = ">=22.12,<24.0"
